src/objects/Tagselect__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>商談</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>タグ</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>商談タグ</relationshipLabel>
        <relationshipName>Tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>商談タグ</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>商談タグNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>